--- a/src/wigets/Table/Table.module.css
+++ b/src/wigets/Table/Table.module.css
@@ -42,7 +42,7 @@
     display: flex;
     gap: 10%;
     justify-content: center;
-    align-content: center;
+    align-content: baseline;
     padding: 10px 8px;
     flex-basis: 50%;
     border: 1px solid var(--light-grey);
@@ -56,4 +56,9 @@
     padding: 10px 8px;
     flex-basis: 40%;
     border: 1px solid var(--light-grey);
+}
+
+.arrow {
+    width: 12px;
+    height: 20px;
 }
